--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
         <section class="site-title">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
-                <h3>My Porfolio</h3>
-                <h1>Welcome to Art Gallery</h1>
+                <h3>Hi there</h3>
+                <h1>Welcome to my Art Gallery template website</h1>
                 <button class="btn">Explore</button>
             </div>
         </section>
